22.5.8a Changelog: - Fix name in your user control area being too high. - Fix Nitro tab's background color.

--- a/BetterDiscordAddons/Themes/modernx-discord.theme.source.css
+++ b/BetterDiscordAddons/Themes/modernx-discord.theme.source.css
@@ -1,7 +1,7 @@
 @import url(https://discord-custom-covers.github.io/usrbg/dist/usrbg.css);
 
 :root {
-    --theme-version: "22.4.28b "
+    --theme-version: "22.5.8a "
 }
 
 [id^="ModernX Theme"] .bd-addon-header .bd-version:before {
@@ -907,6 +907,7 @@
 
 .title-338goq {
     width: var(--username-button-width);
+    line-height: 30px;
 }
 
 #app-mount .guilds-2JjMmN {
@@ -4447,6 +4448,10 @@ button[aria-label="Disable Game Activity"] .contents-3ca1mk:after {
 .auPromo-Gk5s48, .auPromoSelected-336Wc2,
 .badgeIconSettingsMenu-39c26C {
     display: none;
+}
+
+.localizeBadge-24ZXps {
+    background-color: transparent;
 }
 
 .bannerNormal-22rPhb,
